--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body{
 
 /* Home Page */
 #hero{
-    background-image: url("images/hero.png");
+    background-image: url("images/hero2.png");
     height: 90vh;
     width: 100%;
     background-position: top 25% right 0;
